--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <button type="button" class="btn btn-primary"
-                        v-on-click="saveMember(member)">
+                        v-on:click="saveMember(member)">
                     Salvar
                 </button>
 
