--- a/vue-app/index.html
+++ b/vue-app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>vue-app</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="#" />
   </head>
   <body>
     <div id="app"></div>
